--- a/resume.html
+++ b/resume.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-    <h1 class="hname" id="top">Poh Jing Seng</h1>
+    <h1 class="hname" id="top">Jing Seng Poh</h1>
     <hr>
 
     <h2 class="sect">Contact</h2>
     <img class="portrait" src="js_portrait.png" alt="A picture of JS">
     <p>Mobile: 9009 9178</p>
     <p>Email: <a href="mailto:jingsengpoh@gmail.com">jingsengpoh@gmail.com</a></p>
-    <p>Linkedin: <a href="https://www.linkedin.com/in/jing-seng-poh-405579192/" target="_blank">Jing Seng Poh</a></p>
+    <p>Linkedin: <a href="https://www.linkedin.com/in/js-poh" target="_blank">linkedin.com/in/js-poh</a></p>
     <hr>
 
     <h2 class="sect">Career objective</h2>
