--- a/index.html
+++ b/index.html
@@ -5,12 +5,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing page</title>
+    <title>About me</title>
     <link rel="stylesheet" href="indexstyles.css">
 </head>
 
 <body>
-    <p>Click <a href="resume.html">here</a> to go to my resume</p>
+    <header>
+        <a href="index.html">About me</a>
+        <!--interests, goals, strengths-->
+        <a href="">Proficiencies</a>
+        <!--Education, work exp, certifications, strengths-->
+        <a href="">Games</a>
+        <!--My HTMLCSSJS games-->
+        <a href="resume.html">Resume</a>
+    </header>
+
+    <div>
+        <p><img id="intro_pic" src="js_bob.jpg" alt="A picture of JS"></p>
+        <p class="left">Poh Jing Seng<br><br>No one shall have carrot</p>
+    </div>
+
+    <div class="info">
+        <p class="topic">Short introduction</p>
+        <p class="details">Hello, my name is Jing Seng! I was born in Oct 2000 and graduated from Nanyang Polytechnic
+            with
+            a Diploma in Business Management specialising in Human Resources and International Business in April 2020.
+            My interests include kickboxing, playing the piano, and also writing programs designed to automate tedious
+            processes and also creating visually pleasing games!</p>
+    </div>
+
+    <footer>
+        <a href="linkedin.com/js-poh"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png"
+                alt="Linkedin"></a>
+    </footer>
 </body>
 
 </html>
