--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <!--interests, goals, strengths-->
         <a href="">Proficiencies</a>
         <!--Education, work exp, certifications, strengths-->
-        <a href="">Games</a>
-        <!--My HTMLCSSJS games-->
+        <a href="">Projects</a>
+        <!--My HTMLCSSJS games, python games, automation, telegram bots etc-->
         <a href="resume.html">Resume</a>
     </header>
 
