--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </div>
 
     <footer>
-        <a href="linkedin.com/js-poh"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png"
-                alt="Linkedin"></a>
+        <a href="https://linkedin.com/in/js-poh" target="_blank"><img
+                src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="Linkedin"></a>
     </footer>
 </body>
 
