--- a/index.html
+++ b/index.html
@@ -11,21 +11,34 @@
 
 <body>
     <header>
-        <a href="index.html">About me</a>
+        <a class="current" href="index.html">About me</a>
         <!--interests, goals, strengths-->
         <a href="">Proficiencies</a>
         <!--Education, work exp, certifications, strengths-->
         <a href="">Projects</a>
         <!--My HTMLCSSJS games, python games, automation, telegram bots etc-->
         <a href="resume.html">Resume</a>
+        <a href="">Contact</a>
     </header>
 
-    <div>
+    <div class="margin">
         <p><img id="intro_pic" src="js_bob.jpg" alt="A picture of JS"></p>
-        <p class="left">Poh Jing Seng<br><br>No one shall have carrot</p>
+        <p class="left">Poh Jing Seng<br><br>Website still under construction!</p>
     </div>
 
+    <hr>
+    <h1>Introduction</h1>
+    <hr>
     <div class="info">
+        <p class="topic">Short introduction</p>
+        <p class="details">Hello, my name is Jing Seng! I was born in Oct 2000 and graduated from Nanyang Polytechnic
+            with
+            a Diploma in Business Management specialising in Human Resources and International Business in April 2020.
+            My interests include kickboxing, playing the piano, and also writing programs designed to automate tedious
+            processes and also creating visually pleasing games!</p>
+    </div>
+
+    <div class="info" style="margin-top:50px">
         <p class="topic">Short introduction</p>
         <p class="details">Hello, my name is Jing Seng! I was born in Oct 2000 and graduated from Nanyang Polytechnic
             with
