--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About me</title>
+    <title>Home</title>
     <link rel="stylesheet" href="indexstyles.css">
 </head>
 
 <body>
     <header>
-        <a class="current" href="index.html">About me</a>
+        <a class="current" href="index.html">About</a>
         <!--interests, goals, strengths-->
         <a href="">Proficiencies</a>
         <!--Education, work exp, certifications, strengths-->
@@ -22,7 +22,7 @@
     </header>
 
     <div class="margin">
-        <p><img id="intro_pic" src="js_bob.jpg" alt="A picture of JS"></p>
+        <p><img id="intro_pic" src="lib/js_bob.jpg" alt="A picture of JS"></p>
         <p class="left">Poh Jing Seng<br><br>Website still under construction!</p>
     </div>
 
@@ -30,7 +30,7 @@
     <h1>Introduction</h1>
     <hr>
     <div class="info">
-        <p class="topic">Short introduction</p>
+        <p class="topic">About me</p>
         <p class="details">Hello, my name is Jing Seng! I was born in Oct 2000 and graduated from Nanyang Polytechnic
             with
             a Diploma in Business Management specialising in Human Resources and International Business in April 2020.
@@ -38,14 +38,10 @@
             processes and also creating visually pleasing games!</p>
     </div>
 
-    <div class="info" style="margin-top:50px">
-        <p class="topic">Short introduction</p>
-        <p class="details">Hello, my name is Jing Seng! I was born in Oct 2000 and graduated from Nanyang Polytechnic
-            with
-            a Diploma in Business Management specialising in Human Resources and International Business in April 2020.
-            My interests include kickboxing, playing the piano, and also writing programs designed to automate tedious
-            processes and also creating visually pleasing games!</p>
-    </div>
+    <hr class="margin">
+    <h1>Interests</h1>
+    <hr>
+    <h2>Kickboxing</h2>
 
     <footer>
         <a href="https://linkedin.com/in/js-poh" target="_blank"><img
