--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
     <hr>
 
     <h2 class="sect">Contact</h2>
-    <img class="portrait" src="js_portrait.png" alt="A picture of JS">
+    <img class="portrait" src="lib/js_portrait.png" alt="A picture of JS">
     <p>Mobile: 9009 9178</p>
     <p>Email: <a href="mailto:jingsengpoh@gmail.com">jingsengpoh@gmail.com</a></p>
     <p>Linkedin: <a href="https://www.linkedin.com/in/js-poh" target="_blank">linkedin.com/in/js-poh</a></p>
@@ -149,7 +149,10 @@
     </ul>
     <br>
     <hr>
-    <p style="text-align : center;"><a href="#top">Back to top</a></p>
+    <footer>
+        <p style="text-align : center;"><a href="#top">Back to top</a></p>
+        <p><a href="index.html">Back to home</a></p>
+    </footer>
 </body>
 
 </html>
