--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
         <p class="topic">About me</p>
         <p class="details">Hello, my name is Jing Seng! I was born in Oct 2000 and graduated from Nanyang Polytechnic
             with
-            a Diploma in Business Management specialising in Human Resources and International Business in April 2020.
-            My interests include kickboxing, playing the piano, and also writing programs designed to automate tedious
+            a Diploma in Business Management specialising in Human Resources and International Business in April 2020. I
+            will be entering Singapore University of Social Sciences in Oct to pursue my bachelors in Information and
+            Communications Technology! My interests include kickboxing, playing the piano, and also writing programs
+            designed to automate tedious
             processes and also creating visually pleasing games!</p>
     </div>
 
@@ -42,10 +44,102 @@
     <h1>Interests</h1>
     <hr>
     <h2>Kickboxing</h2>
+    <div>
+        <div class="info">
+            <p style="margin: auto;">
+                <img src="lib/f2.PNG" alt="A picture of JS sparring">
+                <img src="lib/f3.PNG" alt="A picture of JS sparring">
+                <img src="lib/f4.PNG" alt="A picture of JS sparring">
+            </p>
+        </div>
+        <p class="info_text"><strong>Sanda kickboxing</strong><br><br>I started this hobby in May 2017, when I joined
+            Nanyang Polytechnic's Kickboxing
+            CCA. Knowing I could excel in anything I put my heart to, I invested loads of time and
+            effort into this activity which landed me in Nanyang Polytechnic's fight team. I went
+            on to represent the school in a competition in January 2018 where I was drafted for
+            the national team. I was then offered an opportunity to represent Singapore in the under 18s division but
+            did not
+            participate due to flak from my parents and the fact that I was going on a semester long exchange program
+            soon.
+            Nevertheless, I
+            truly treasured my time in the national team and it imparted a few significant values that I
+            still follow to this day.</p>
+    </div>
+    <br>
+
+    <h2>Piano</h2>
+    <div>
+        <p><img class="interest_pic" src="lib/piano.jpg" alt="A picture of JS playing the piano"></p>
+        <p class="info_text"><strong>Playing the piano</strong><br><br>I started learning how to play the piano in 2007,
+            after my first
+            music class in primary school. Since then, my love for music grew and I started seeing this as a channel to
+            unleash my creativity. Growing up, all of my schools have free access to musical instruments for students
+            and
+            having a family
+            that is supportive both emotionally and financially was a huge bonus.
+            Being a part of Piano Ensemble(club) in polytechnic has also allowed me to participate in various events,
+            concerts and
+            musical productions.<br><br>As a "ear-player", I can play almost any song just by listening to it once or
+            twice.
+            Do let me know if you have any song requests!</p>
+    </div>
+    <br>
+
+    <h2>Programming</h2>
+    <div>
+        <p><img class="interest_pic" src="lib/programming.PNG" alt="Image of programming fundamentals"></p>
+        <p class="info_text"><strong>How it started</strong><br><br>My entry point into coding was through the
+            Grand-Theft-Auto(GTA) modding community where my gameplay experience can be enhanced via my own scripts.
+            However, I realised this required knowledge in C. This inspired me to start learning python in order to
+            build up my foundation and I have since moved on to other languages such as C for a deeper understanding of
+            how a computer works, and HTML CSS JS in order to easily build programs/websites with nice GUIs. Sticking
+            with python was nice, but in order to make the most out of my potential, I had to move on and learn more
+            languages and their purposes.</p>
+        <p><img class="interest_pic" src="lib/programming2.PNG"
+                alt="Image of JS earning his 2nd star on problem solving"></p>
+        <p class="info_text"><strong>How has programming improved your life?</strong><br><br>I've actually started using
+            programs for
+            automation since I was in secondary school. Being one that would rather "work smart" instead of "work hard",
+            I was always one to look for better, more efficient ways to do things. This led to me experimenting with
+            simple programs built
+            for automation - mainly to use in games. I actually benefitted significantly not just because it saved me
+            time "grinding" these games but also because
+            it made me quite a lot of extra money by selling the in-game currencies for cash. <br><br>As someone that
+            loves understanding
+            how things work, I actually spent a lot of time looking through the source codes and trying my best to
+            figure out what everything meant and
+            how words can make a computer do stuff. Unfortunately, it was to no avail as I basically had zero
+            programming knowledge at that point. It was only till I got a little older and started playing GTA before I
+            really went and put in the effort to start learning. I really wished I started earlier though, but as a kid,
+            my attention span was pretty short but hey, better late than never right?</p>
+        <p><img class="interest_pic" src="lib/programming3.PNG" alt="Image of code acceptance on leetcode"></p>
+        <p class="info_text"><strong>Business > Technology?</strong><br><br>I understand that some may be wondering why
+            I decided to pursue a career in Technology instead of Business, considering that my Diploma was in business
+            management. Here's why. <br><br>When I graduated from secondary school, I have already set my sights on
+            "doing business"
+            in the future. I knew that I did not want to conform to the dress codes and 8-5 school schedule that junior
+            colleges had
+            hence chose to enter a polytechnic. In hindsight, 16 year old me actually had no idea what "doing business"
+            actually meant and
+            chose the course just because it sounded cool. Although I did have a lot of fun and did get to interact with
+            many people
+            with different views on different subjects, I only realised during my internship as a human resources
+            assistant that I did not feel
+            mentally stimulated and that I could not handle doing simple repetitve tasks for the rest of my career. This
+            led
+            to a lot of self-reflection and through discussion with my friends, it finally dawned on me that I have been
+            fiddling with
+            software not because of homework or anything, but out of pure interest. I realised that I was happiest when
+            making games or automation software that can improve people's way of life and efficiency. On top of that,
+            having new challenges to solve frequently and doing meaningful work that can directly impact others
+            positively on a daily basis sounds like the perfect job for me.</p>
+    </div>
 
     <footer>
+        <br><br><br>
         <a href="https://linkedin.com/in/js-poh" target="_blank"><img
                 src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="Linkedin"></a>
+        <p>Website made by Poh Jing Seng. 2022.</p>
     </footer>
 </body>
 
