--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="indexstyles.css">
+    <script>alert("This website was not built for mobile. Viewing this page on mobile may cause elements to be formatted incorrectly")</script>
 </head>
 
 <body>
