--- a/index.html
+++ b/index.html
@@ -7,19 +7,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="indexstyles.css">
-    <script>alert("This website was not built for mobile. Viewing this page on mobile may cause elements to be formatted incorrectly")</script>
+    <!--<script>alert("This website was not built for mobile. Viewing this page on mobile may cause elements to be formatted incorrectly")</script>!-->
 </head>
 
 <body>
     <header>
-        <a class="current" href="index.html">About</a>
-        <!--interests, goals, strengths-->
-        <a href="">Proficiencies</a>
-        <!--Education, work exp, certifications, strengths-->
-        <a href="">Projects</a>
-        <!--My HTMLCSSJS games, python games, automation, telegram bots etc-->
-        <a href="resume.html">Resume</a>
-        <a href="">Contact</a>
+        <div class="dropdown">
+            <button class="dropbtn"><a class="main" href="index.html">About</a></button>
+            <!--interests, goals, strengths-->
+            <div class="dropdown_content">
+                <a href="#">Introduction</a>
+                <a href="">Interest - Sanda kickboxing</a>
+                <a href="">Interest - Playing the piano</a>
+                <a href="">Interest - Programming</a>
+                <a href="">Goals</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn"><a class="main" href="#">Proficiencies</a></button>
+            <!--Education, work exp, certifications, strengths-->
+            <div class="dropdown_content">
+                <a href="">Education</a>
+                <a href="">Work experience</a>
+                <a href="">Professional certifications</a>
+                <a href="">Strengths</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn"><a class="main" href="#">Projects</a></button>
+            <!--My HTMLCSSJS games, python games, automation, telegram bots etc-->
+            <div class="dropdown_content">
+                <a href="">Games</a>
+                <a href="">Automation</a>
+                <a href="">Bots</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn"><a class="main" href="resume.html">eResume</a></button>
+            <div class="dropdown_content">
+                <a href="resume.html">Raw resume</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn"><a class="main" href="#">Contact</a></button>
+            <div class="dropdown_content">
+                <a href="">Email</a>
+                <a href="">Linkedin</a>
+            </div>
+        </div>
     </header>
 
     <div class="margin">
@@ -136,6 +171,8 @@
             positively on a daily basis sounds like the perfect job for me.</p>
     </div>
 
+    <p style="text-align: center; margin-top: 50px;"><br><br><br><a href=" #top">Back to
+            top</a></p>
     <footer>
         <br><br><br>
         <a href="https://linkedin.com/in/js-poh" target="_blank"><img
