--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
     <header>
         <div class="dropdown">
-            <button class="dropbtn"><a class="main" href="index.html">About</a></button>
+            <button class="dropbtn current"><a class="main" href="index.html">About</a></button>
             <!--interests, goals, strengths-->
             <div class="dropdown_content">
-                <a href="#">Introduction</a>
-                <a href="">Interest - Sanda kickboxing</a>
-                <a href="">Interest - Playing the piano</a>
-                <a href="">Interest - Programming</a>
-                <a href="">Goals</a>
+                <a href="#intro">Introduction</a>
+                <a href="#int_sanda">Interest - Sanda kickboxing</a>
+                <a href="#int_piano">Interest - Playing the piano</a>
+                <a href="#int_pro">Interest - Programming</a>
+                <a href="#goals">Goals</a>
             </div>
         </div>
         <div class="dropdown">
@@ -63,7 +63,7 @@
     </div>
 
     <hr>
-    <h1>Introduction</h1>
+    <h1 id="#intro">Introduction</h1>
     <hr>
     <div class="info">
         <p class="topic">About me</p>
@@ -77,9 +77,9 @@
     </div>
 
     <hr class="margin">
-    <h1>Interests</h1>
+    <h1 id="int">Interests</h1>
     <hr>
-    <h2>Kickboxing</h2>
+    <h2 id="int_sanda">Kickboxing</h2>
     <div>
         <div class="info">
             <p style="margin: auto;">
@@ -95,7 +95,8 @@
             on to represent the school in a competition in January 2018 where I was drafted for
             the national team. I was then offered an opportunity to represent Singapore in the under 18s division but
             did not
-            participate due to flak from my parents and the fact that I was going on a semester long exchange program
+            participate due to flak from my parents and the fact that I was going on a semester long overseas exchange
+            program
             soon.
             Nevertheless, I
             truly treasured my time in the national team and it imparted a few significant values that I
@@ -103,7 +104,7 @@
     </div>
     <br>
 
-    <h2>Piano</h2>
+    <h2 id="int_piano">Piano</h2>
     <div>
         <p><img class="interest_pic" src="lib/piano.jpg" alt="A picture of JS playing the piano"></p>
         <p class="info_text"><strong>Playing the piano</strong><br><br>I started learning how to play the piano in 2007,
@@ -121,7 +122,7 @@
     </div>
     <br>
 
-    <h2>Programming</h2>
+    <h2 id="int_pro">Programming</h2>
     <div>
         <p><img class="interest_pic" src="lib/programming.PNG" alt="Image of programming fundamentals"></p>
         <p class="info_text"><strong>How it started</strong><br><br>My entry point into coding was through the
@@ -138,9 +139,9 @@
             automation since I was in secondary school. Being one that would rather "work smart" instead of "work hard",
             I was always one to look for better, more efficient ways to do things. This led to me experimenting with
             simple programs built
-            for automation - mainly to use in games. I actually benefitted significantly not just because it saved me
-            time "grinding" these games but also because
-            it made me quite a lot of extra money by selling the in-game currencies for cash. <br><br>As someone that
+            for automation - mainly to use in games. I actually benefitted significantly because it saved me a lot of
+            time from "grinding" these games - which meant I could spend more time resting or on schoolwork. <br><br>As
+            someone that
             loves understanding
             how things work, I actually spent a lot of time looking through the source codes and trying my best to
             figure out what everything meant and
@@ -169,6 +170,33 @@
             making games or automation software that can improve people's way of life and efficiency. On top of that,
             having new challenges to solve frequently and doing meaningful work that can directly impact others
             positively on a daily basis sounds like the perfect job for me.</p>
+    </div>
+    <br>
+
+    <hr class="margin">
+    <h1 id="goals">My goals</h1>
+    <hr>
+    <div>
+        <p><img class="interest_pic" src="https://wallpaperaccess.com/full/3278874.jpg" alt="Image of a football goal">
+        </p>
+        <p class="info_text"><strong>My career goals</strong> <br><br>
+            Goal setting is important. Having goals drives one to
+            put in the required effort to work towards it. Those who don't realise the value of goal setting will
+            stagnate and then
+            wonder why everyone around them is advancing while they are stagnant. <br><br>
+            Throughout my programming journey so far, I've experimented with different areas of programming and I've
+            found that I enjoy making games the most. Apart from the ability to make ideas come to life, I've seen
+            snippets of warzone's RICHOCHET anti-cheat system trolling
+            game hackers through applying damage shields and I find them really entertaining. It would be a pleasure if
+            I am able to be part of a team
+            that writes software like this. Being part of a team developing and maintaining a game also feels like it
+            would
+            be a lot of fun - especially when you're trying to find loopholes to exploit and then patching it yourself.
+            <br><br>
+            My short-term goals would be to learn the knowledge and skills required during my studies while securing
+            internships in the gaming industry to gain experience. My long term goal would be to one day lead a team of
+            competent software engineers in developing games or anti-cheat software.
+        </p>
     </div>
 
     <p style="text-align: center; margin-top: 50px;"><br><br><br><a href=" #top">Back to
