--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <br><br><br>
         <a href="https://linkedin.com/in/js-poh" target="_blank"><img
                 src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="Linkedin"></a>
-        <p>Website made by Poh Jing Seng. 2022.</p>
+        <p>Website made by Poh Jing Seng 2022 <br>PC Version</p>
     </footer>
 </body>
 
