--- a/index.html
+++ b/index.html
@@ -16,43 +16,43 @@
             <button class="dropbtn current"><a class="main" href="index.html">About</a></button>
             <!--interests, goals, strengths-->
             <div class="dropdown_content">
-                <a href="#intro">Introduction</a>
-                <a href="#int_sanda">Interest - Sanda kickboxing</a>
-                <a href="#int_piano">Interest - Playing the piano</a>
-                <a href="#int_pro">Interest - Programming</a>
-                <a href="#goals">Goals</a>
+                <a href="index.html#intro">Introduction</a>
+                <a href="index.html#int_sanda">Interest - Sanda kickboxing</a>
+                <a href="index.html#int_piano">Interest - Playing the piano</a>
+                <a href="index.html#int_pro">Interest - Programming</a>
+                <a href="index.html#goals">Goals</a>
             </div>
         </div>
         <div class="dropdown">
-            <button class="dropbtn"><a class="main" href="#">Proficiencies</a></button>
+            <button class="dropbtn"><a class="main" href="proficiencies.html">Proficiencies</a></button>
             <!--Education, work exp, certifications, strengths-->
             <div class="dropdown_content">
-                <a href="">Education</a>
-                <a href="">Work experience</a>
-                <a href="">Professional certifications</a>
-                <a href="">Strengths</a>
+                <a href="proficiencies.html#edu">Education</a>
+                <a href="proficiencies.html#exp">Work experience</a>
+                <a href="proficiencies.html#cert">Professional certifications</a>
+                <a href="proficiencies.html#str">Strengths</a>
             </div>
         </div>
         <div class="dropdown">
-            <button class="dropbtn"><a class="main" href="#">Projects</a></button>
+            <button class="dropbtn"><a class="main" href="projects.html">Projects</a></button>
             <!--My HTMLCSSJS games, python games, automation, telegram bots etc-->
             <div class="dropdown_content">
-                <a href="">Games</a>
-                <a href="">Automation</a>
-                <a href="">Bots</a>
+                <a href="projects.html#games">Games</a>
+                <a href="projects.html#auto">Automation</a>
+                <a href="projects.html#bot">Bots</a>
             </div>
         </div>
         <div class="dropdown">
             <button class="dropbtn"><a class="main" href="resume.html">eResume</a></button>
             <div class="dropdown_content">
-                <a href="resume.html">Raw resume</a>
+                <a href="rawresume.html" target="_blank">View raw</a>
             </div>
         </div>
         <div class="dropdown">
-            <button class="dropbtn"><a class="main" href="#">Contact</a></button>
+            <button class="dropbtn"><a class="main" href="contact.html">Contact</a></button>
             <div class="dropdown_content">
-                <a href="">Email</a>
-                <a href="">Linkedin</a>
+                <a href="contact.html">Email</a>
+                <a href="https://linkedin.com/in/js-poh" target="_blank">Linkedin</a>
             </div>
         </div>
     </header>
