--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             </div>
         </div>
     </header>
+    <button class="btt"><a href="#top">Back to top</a></button>
 
     <div class="margin">
         <p><img id="intro_pic" src="lib/js_bob.jpg" alt="A picture of JS"></p>
@@ -199,8 +200,6 @@
         </p>
     </div>
 
-    <p style="text-align: center; margin-top: 50px;"><br><br><br><a href=" #top">Back to
-            top</a></p>
     <footer>
         <br><br><br>
         <a href="https://linkedin.com/in/js-poh" target="_blank"><img
