--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <a href="proficiencies.html#edu">Education</a>
                 <a href="proficiencies.html#exp">Work experience</a>
                 <a href="proficiencies.html#cert">Professional certifications</a>
+                <a href="proficiencies.html#skills">Skills</a>
                 <a href="proficiencies.html#str">Strengths</a>
             </div>
         </div>
@@ -74,7 +75,7 @@
             will be entering Singapore University of Social Sciences in Oct to pursue my bachelors in Information and
             Communications Technology! My interests include kickboxing, playing the piano, and also writing programs
             designed to automate tedious
-            processes and also creating visually pleasing games!</p>
+            processes and also creating visually pleasing games. My MBTI is ESTJ-A for those who are interested!</p>
     </div>
 
     <hr class="margin">
