--- a/proficiencies.html
+++ b/proficiencies.html
@@ -29,6 +29,7 @@
                 <a href="proficiencies.html#edu">Education</a>
                 <a href="proficiencies.html#exp">Work experience</a>
                 <a href="proficiencies.html#cert">Professional certifications</a>
+                <a href="proficiencies.html#skills">Skills</a>
                 <a href="proficiencies.html#str">Strengths</a>
             </div>
         </div>
