--- a/proficiencies.html
+++ b/proficiencies.html
@@ -57,6 +57,11 @@
         </div>
     </header>
     <button class="btt"><a href="#top">Back to top</a></button>
+
+    <div id="edu exp cert">
+        <p>Details of my Education, Work experience and Professional certifications may be found in my <a
+                href="resume.html">resume</a>.</p>
+    </div>
 </body>
 
 </html>
