--- a/lib/headerfooter.html
+++ b/lib/headerfooter.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <link rel="stylesheet" href="indexstyles.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="universal_styles.css">
 </head>
 
 <body>
     <header>
         <div class="dropdown">
-            <button class="dropbtn"><a class="main" href="index.html">About</a></button>
+            <button class="dropbtn current"><a class="main" href="index.html">About</a></button>
             <!--interests, goals, strengths-->
             <div class="dropdown_content">
                 <a href="index.html#intro">Introduction</a>
@@ -49,41 +49,14 @@
             </div>
         </div>
         <div class="dropdown">
-            <button class="dropbtn current"><a class="main" href="contact.html">Contact</a></button>
+            <button class="dropbtn"><a class="main" href="contact.html">Contact</a></button>
             <div class="dropdown_content">
                 <a href="contact.html">Email</a>
                 <a href="https://linkedin.com/in/js-poh" target="_blank">Linkedin</a>
             </div>
         </div>
     </header>
-
-    <form action="https://formspree.io/f/meqnpqry" method="POST">
-        <div class="eform">
-            <p style="font-weight: 700; font-size: 24px;">Leave me a message!</p>
-            <br>
-            <p class="name">
-                <label>
-                    Name:<br>
-                    <input type="text" required>
-                </label>
-            </p>
-            <p class="email">
-                <label>
-                    Email:<br>
-                    <input type="email" name="email" required>
-                </label>
-            </p>
-            <p class="message">
-                <label>
-                    Message: <br>
-                    <textarea name="message" rows="10" cols="50" required></textarea>
-                </label>
-            <p>
-                <button type="submit">Send</button>
-            </p>
-            </p>
-        </div>
-    </form>
+    <button class="btt"><a href="#top">Back to top</a></button>
 
     <footer>
         <br><br><br>
