--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <link rel="stylesheet" href="projectsstyles.css">
+    <link rel="stylesheet" href="indexstyles.css">
 </head>
 
 <body>
@@ -57,6 +57,13 @@
         </div>
     </header>
     <button class="btt"><a href="#top">Back to top</a></button>
+
+    <footer>
+        <br><br><br>
+        <a href="https://linkedin.com/in/js-poh" target="_blank"><img
+                src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="Linkedin"></a>
+        <p>Website made by Poh Jing Seng 2022 <br>PC Version</p>
+    </footer>
 </body>
 
 </html>
