--- a/proficiencies.html
+++ b/proficiencies.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proficiencies</title>
-    <link rel="stylesheet" href="proficienciesstyles.css">
+    <link rel="stylesheet" href="indexstyles.css">
 </head>
 
 <body>
@@ -62,6 +62,13 @@
         <p>Details of my Education, Work experience and Professional certifications may be found in my <a
                 href="resume.html">resume</a>.</p>
     </div>
+
+    <footer>
+        <br><br><br>
+        <a href="https://linkedin.com/in/js-poh" target="_blank"><img
+                src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="Linkedin"></a>
+        <p>Website made by Poh Jing Seng 2022 <br>PC Version</p>
+    </footer>
 </body>
 
 </html>
