--- a/rawresume.html
+++ b/rawresume.html
@@ -16,8 +16,9 @@
     <h2 class="sect">Contact</h2>
     <img class="portrait" src="lib/js_portrait.png" alt="A picture of JS">
     <p>Mobile: 9009 9178</p>
-    <p>Email: <a href="mailto:jingsengpoh@gmail.com">jingsengpoh@gmail.com</a></p>
-    <p>Linkedin: <a href="https://www.linkedin.com/in/js-poh" target="_blank">linkedin.com/in/js-poh</a></p>
+    <p>Email: <a class="hlink" href="mailto:jingsengpoh@gmail.com">jingsengpoh@gmail.com</a></p>
+    <p>Linkedin: <a class="hlink" href="https://www.linkedin.com/in/js-poh" target="_blank">linkedin.com/in/js-poh</a>
+    </p>
     <hr>
 
     <h2 class="sect">Career objective</h2>
@@ -26,7 +27,8 @@
     <hr>
 
     <h2 class="sect">Project experience</h2>
-    <p>All my projects are available <a href="https:\\github.com/jspoh" target="_blank">here</a> (github.com/jspoh)</p>
+    <p>All my projects are available <a class="hlink" href="https:\\github.com/jspoh" target="_blank">here</a>
+        (github.com/jspoh)</p>
     <hr>
 
     <h2 class="sect">Education</h2>
@@ -67,6 +69,8 @@
                     <li>Management of conflicts between my subordinates and others</li>
                     <li>Information gathering and writing incident reports</li>
                     <li>Took care of the welfare and health of my subordinates</li>
+                    <li>Ensured timeliness of certain operational demands for Search And Rescue(SAR) missions in which
+                        many lives have been saved</li>
                 </ul>
                 <li>Awards</li>
                 <ul>
@@ -78,6 +82,25 @@
                 </ul>
             </ul>
             <p>Accepted an offer for a 200% pay increment and multiple benefits to extend service for 3 months</p>
+        </li>
+        <br><br>
+        <li>
+            <p>Air Force Recruitment Centre (Sep 2020 - Dec 2020)</p>
+            <p style="margin-top: -15px;">Position: Officer recruitment processing assistant</p>
+            <ul>
+                <li>Responsibilities</li>
+                <ul>
+                    <li>Liaised with prospective applicants on application information</li>
+                    <ul>
+                        <li>Medical appointments</li>
+                        <li>Web briefings</li>
+                        <li>Document submissions</li>
+                        <li>Contract signings</li>
+                    </ul>
+                    <li>Clarified applicants' concerns</li>
+                    <li>Ensured smooth day to day operations for my superior</li>
+                </ul>
+            </ul>
         </li>
         <br><br>
         <li>
@@ -150,8 +173,8 @@
     <br>
     <hr>
     <footer>
-        <p style="text-align : center;"><a href="#top">Back to top</a></p>
-        <p><a href="index.html">Back to home</a></p>
+        <p style="text-align : center;"><a class="hlink" href="#top">Back to top</a></p>
+        <p><a class="hlink" href="index.html">Back to home</a></p>
     </footer>
 </body>
 
