--- a/projects.html
+++ b/projects.html
@@ -58,6 +58,8 @@
     </header>
     <button class="btt"><a href="#top">Back to top</a></button>
 
+    <p><img src="https://c.tenor.com/1RZeF9LS2VQAAAAC/heh-heheh.gif" alt="" class="interest_pic"></p>
+
     <footer>
         <br><br><br>
         <a href="https://linkedin.com/in/js-poh" target="_blank"><img
