--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="indexstyles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Ubuntu:wght@300&display=swap"
+        rel="stylesheet">
     <!--<script>alert("This website was not built for mobile. Viewing this page on mobile may cause elements to be formatted incorrectly")</script>!-->
 </head>
 
@@ -57,6 +60,7 @@
             </div>
         </div>
     </header>
+
     <button class="btt"><a href="#top">Back to top</a></button>
 
     <div class="margin">
@@ -65,10 +69,10 @@
     </div>
 
     <hr>
-    <h1 id="#intro">Introduction</h1>
+    <h1 class="cursive" id="#intro">Introduction</h1>
     <hr>
     <div class="info">
-        <p class="topic">About me</p>
+        <p class="topic cursive" style="letter-spacing: 0;">About me</p>
         <p class="details">Hello, my name is Jing Seng! I was born in Oct 2000 and graduated from Nanyang Polytechnic
             with
             a Diploma in Business Management specialising in Human Resources and International Business in April 2020. I
@@ -79,9 +83,9 @@
     </div>
 
     <hr class="margin">
-    <h1 id="int">Interests</h1>
+    <h1 class="cursive" id="int">Interests</h1>
     <hr>
-    <h2 id="int_sanda">Kickboxing</h2>
+    <h2 class="cursive" id="int_sanda">Kickboxing</h2>
     <div>
         <div class="info">
             <p style="margin: auto;">
@@ -106,7 +110,7 @@
     </div>
     <br>
 
-    <h2 id="int_piano">Piano</h2>
+    <h2 class="cursive" id="int_piano">Piano</h2>
     <div>
         <p><img class="interest_pic" src="lib/piano.jpg" alt="A picture of JS playing the piano"></p>
         <p class="info_text"><strong>Playing the piano</strong><br><br>I started learning how to play the piano in 2007,
@@ -124,7 +128,7 @@
     </div>
     <br>
 
-    <h2 id="int_pro">Programming</h2>
+    <h2 class="cursive" id="int_pro">Programming</h2>
     <div>
         <p><img class="interest_pic" src="lib/programming.PNG" alt="Image of programming fundamentals"></p>
         <p class="info_text"><strong>How it started</strong><br><br>My entry point into coding was through the
@@ -176,7 +180,7 @@
     <br>
 
     <hr class="margin">
-    <h1 id="goals">My goals</h1>
+    <h1 class="cursive" id="goals">My goals</h1>
     <hr>
     <div>
         <p><img class="interest_pic" src="https://wallpaperaccess.com/full/3278874.jpg" alt="Image of a football goal">
@@ -200,7 +204,6 @@
             competent software engineers in developing games or anti-cheat software.
         </p>
     </div>
-
     <footer>
         <br><br><br>
         <a href="https://linkedin.com/in/js-poh" target="_blank"><img
