--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <hr>
     <h1 class="cursive" id="#intro">Introduction</h1>
-    <div class="info">
+    <div class="flex">
         <p class="topic cursive" style="letter-spacing: 0;">About me</p>
         <p class="details">Hello, my name is Jing Seng! I was born in Oct 2000 and graduated from Nanyang Polytechnic
             with
@@ -87,9 +87,7 @@
     <div>
         <div class="info">
             <p style="margin: auto;">
-                <img src="lib/f2.PNG" alt="A picture of JS sparring">
-                <img src="lib/f3.PNG" alt="A picture of JS sparring">
-                <img src="lib/f4.PNG" alt="A picture of JS sparring">
+                <img class="interest_pic" src="lib/f2.PNG" alt="A picture of JS sparring">
             </p>
         </div>
         <p class="info_text"><strong>Sanda kickboxing</strong><br><br>I started this hobby in May 2017, when I joined
@@ -205,7 +203,7 @@
         <br><br><br>
         <a href="https://linkedin.com/in/js-poh" target="_blank"><img
                 src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="Linkedin"></a>
-        <p>Website made by Poh Jing Seng 2022 <br>PC Version</p>
+        <p>April 2022</p>
     </footer>
 </body>
 
