--- a/rawresume.html
+++ b/rawresume.html
@@ -15,8 +15,9 @@
 
     <h2 class="sect">Contact</h2>
     <img class="portrait" src="lib/js_portrait.png" alt="A picture of JS">
-    <p>Mobile: 9009 9178</p>
-    <p>Email: <a class="hlink" href="mailto:jingsengpoh@gmail.com">jingsengpoh@gmail.com</a></p>
+    <p class="hide">Mobile: 9009 9178</p>
+    <p class="hide">Email: <a class="hlink" href="mailto:jingsengpoh@gmail.com">jingsengpoh@gmail.com</a></p>
+    <p class="">Email: <a class="hlink" href="https://jspoh.github.io/contact.html">Click here to email me!</a></p>
     <p>Linkedin: <a class="hlink" href="https://www.linkedin.com/in/js-poh" target="_blank">linkedin.com/in/js-poh</a>
     </p>
     <hr>
