--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
             <p class="name">
                 <label>
                     Name:<br>
-                    <input type="text" required>
+                    <input type="text" name="name" required>
                 </label>
             </p>
             <p class="email">
