--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             that is supportive both emotionally and financially was a huge bonus.
             Being a part of Piano Ensemble(club) in polytechnic has also allowed me to participate in various events,
             concerts and
-            musical productions.<br><br>As a "ear-player", I can play almost any song just by listening to it once or
+            musical productions.<br><br>As an "ear-player", I can play almost any song just by listening to it once or
             twice.
             Do let me know if you have any song requests!</p>
     </div>
