--- a/resume.html
+++ b/resume.html
@@ -64,6 +64,7 @@
     <img class="portrait" src="lib/js_portrait.png" alt="A picture of JS">
     <p class="hide">Mobile: 9009 9178</p>
     <p class="hide">Email: <a class="hlink" href="mailto:jingsengpoh@gmail.com">jingsengpoh@gmail.com</a></p>
+    <br>
     <p class="">Email: <a class="hlink" href="https://jspoh.github.io/contact.html">Click here to email me!</a></p>
     <p>Linkedin: <a class="hlink" href="https://www.linkedin.com/in/js-poh" target="_blank">linkedin.com/in/js-poh</a>
     </p>
@@ -134,7 +135,7 @@
         <br>
         <li>
             <p>Air Force Recruitment Centre (Sep 2020 - Dec 2020)</p>
-            <p style="margin-top: -15px;">Position: Officer recruitment processing assistant</p>
+            <p style="margin-top: -15px;">Position: Officer recruitment processing assistant / Pilot(trainee)</p>
             <ul>
                 <li>Responsibilities</li>
                 <ul>
@@ -153,7 +154,7 @@
         <br><br>
         <li>
             <p>WBL Engineering & Distribution (Nov 2019 - Feb 2020)</p>
-            <p style="margin-top: -15px;">Position: Human Resources Assistant</p>
+            <p style="margin-top: -15px;">Position: Human Resources Intern</p>
             <ul>
                 <li>Responsibilities</li>
                 <ul>
